apps/matomo/versions/1.0--1.0/manifests/matomo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo-db
  labels:
    app: matomo-db
    app.kubernetes.io/name: matomo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo-db
  template:
    metadata:
      labels:
        app: matomo-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:10.9
          imagePullPolicy: IfNotPresent
          ports:
            - name: mysql
              containerPort: 3306
              protocol: TCP
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: matomo-db-data
