apps/matomo/versions/1.0--1.0/manifests/matomo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matomo
  labels:
    app: matomo
    app.kubernetes.io/name: matomo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matomo
  template:
    metadata:
      labels:
        app: matomo
    spec:
      containers:
        - name: matomo
          image: matomo:5
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: matomo-data
              mountPath: /var/www/html
      volumes:
        - name: matomo-data
          persistentVolumeClaim:
            claimName: matomo-data
