apps/matomo/versions/1.0--1.0/manifests/matomo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  labels:
    app: matomo-db
spec:
  selector:
    app: matomo-db
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
