apps/matomo/versions/1.0--1.0/manifests/matomo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matomo
  labels:
    app: matomo
spec:
  selector:
    app: matomo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
