apps/matomo/versions/1.0--1.0/manifests/matomo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matomo
  annotations:
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: namedotcom
    traefik.ingress.kubernetes.io/router.tls.domains.0.main: "*.asdf.ooo"
spec:
  ingressClassName: traefik
  rules:
    - host: matomo.asdf.ooo
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matomo
                port:
                  number: 80
  tls:
    - hosts:
        - matomo.asdf.ooo
