apps/matomo/versions/1.0--1.0/manifests/matomo-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: matomo-https
spec:
  parentRefs:
    - name: k8s01-lb01
      namespace: gateway
      sectionName: https-matomo
  hostnames:
    - matomo.asdf.ooo
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: matomo
          port: 80
